--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,1 +1,16 @@
-<p>landing-page works!</p>
+<body>
+    <!--Aqui va el encabezado-->
+    
+    
+
+
+
+    <!--Aqui va el formulario-->
+    <div class="contenedor-formulario">
+        <form>
+            <input type="text" placeholder="Nombre completo">
+            <input type="text" placeholder="Celular">
+            <input type="text" placeholder="Correo">
+        </form>
+    </div>
+</body>
