Formulario de registro landing page en html. No funcional

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -4,13 +4,40 @@
     
 
 
+    <div class="contenido">
+        <div class="full">
+            <div class="three-quarters">
+                <span>Mientras planeamos el viaje de tus sueños, te invitamos a registrarte</span>
 
-    <!--Aqui va el formulario-->
-    <div class="contenedor-formulario">
-        <form>
-            <input type="text" placeholder="Nombre completo">
-            <input type="text" placeholder="Celular">
-            <input type="text" placeholder="Correo">
-        </form>
+            </div>
+            <div class="quarter">
+                <br>
+            </div>
+        </div>
+        <br>
+        <div class="full">
+            <!--Aqui va el formulario-->
+            <div class="contenedor-formulario half">
+                <form class="formulario">
+                    <input type="text" class="input" placeholder="Nombre completo"> <br>
+                    <input type="text" class="input" placeholder="Celular"> <br>
+                    <input type="text" class="input" placeholder="Correo"> <br>
+                    <button id="boton-registrarse">¡Registrarse!</button>
+                </form>
+            </div>
+            <div class="half">
+                <br>
+            </div>
+
+        </div>
+        <br>
+        <div class="full">
+            <div class="half">
+                <p>¿Ya eres miembro? <a href="">Inicia sesión</a></p>
+            </div>
+            <div class="half">
+                <br>
+            </div>
+        </div>
     </div>
 </body>
