--- a/src/app/landing-page/landing-page.component.css
+++ b/src/app/landing-page/landing-page.component.css
@@ -1,10 +1,17 @@
 /*----------Estilos generales----------*/
 html{
-    height: 100%;
+    height: 100% !important;
 }
 
 body{
-    /* background-image: url("../../assets/background.png"); */
+    background-image: url("../../assets/background-landing.png");
+    background-size:cover;
+    margin: 0;
+    height: 100vh !important;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 html, body {
@@ -19,14 +26,80 @@ html, body {
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     line-height: 1.8;
-    border: 1px red solid;
+    /* border: 1px red solid; */
+}
+
+.contenido{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 10em;
+}
+
+.full {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.half {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+}
+
+.three-quarters{
+    width: 75%;
+}
+
+.quarter{
+    width: 25%;
+}
+
+/*----------Estilos encabezado----------*/
+
+/*----------Estilos span----------*/
+span {
+    font-size: 3.5em;
+    font-weight: bolder;
+    color: #1A234E;
+    line-height: 1em;
 }
 
 /*----------Estilos formulario----------*/
 .contenedor-formulario{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    
+}
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: transparent;
+    color: #8f96b0;
+}
+
+.input {
+    font-size: 1.5em;
+    border: 0;
+    border-bottom: 1px solid grey;
+    background-color: transparent;
+}
+
+#boton-registrarse{
+    font-size: 1.5em;
+    background-color: #e9951a;
+    color: white;
+    border: 0;
+    border-radius: 10px;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
+}
+
+/*----------Estilos párrafo----------*/
+p {
+    font-size: 1.5em;
+    color: #41547f;
 }
