--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -1,16 +1,33 @@
 <body>
-    <!--Aqui va el encabezado-->
     
-    
+    <div class="landing-page-container">
+        <div class="header">
+            <img src="C:\Users\mpaul\OneDrive\Documents\María Paula\Universidad\PROYECTO INNOVACION\ExploreNest\src\assets\LOGO.jpg" alt="ExploreNest Logo" class="logo">
+            <nav class="navigation-menu">
+                <a href="#" class="menu-link">Mis planes</a>
+                <a href="#" class="menu-link">Hoteles</a>
+                <a href="#" class="menu-link">Vuelos</a>
+                <a href="#" class="menu-link">Actividades</a>
+            </nav>
+        </div>
+        <!--Aqui va el encabezado-->
+        
 
-
-
-    <!--Aqui va el formulario-->
-    <div class="contenedor-formulario">
-        <form>
-            <input type="text" placeholder="Nombre completo">
-            <input type="text" placeholder="Celular">
-            <input type="text" placeholder="Correo">
-        </form>
+        <!--Aqui va el formulario-->
+        <main class="form-section">
+            <h1 class="form-heading">Mientras planeamos tu viaje soñado, te invitamos a registrarte</h1>
+            <div class="contenedor-formulario">
+                <form class ="formulario">
+                    <input type="text" placeholder="Nombre completo">
+                    <input type="text" placeholder="Celular">
+                    <input type="text" placeholder="Correo">
+                    <button type="submit" class="form-button">¡Regístrate!</button>
+                </form>
+   
+            </div>
+            <div class="login-link">
+                ¿Ya eres miembro? <a href="#" class="signin-link">Inicia sesión</a>
+            </div>
+    </main>
     </div>
 </body>
