--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -2,7 +2,8 @@
     
     <div class="landing-page-container">
         <div class="header">
-            <img src="C:\Users\mpaul\OneDrive\Documents\María Paula\Universidad\PROYECTO INNOVACION\ExploreNest\src\assets\LOGO.jpg" alt="ExploreNest Logo" class="logo">
+            <h1 class ="app-name">ExploreNest</h1>
+            <img src="../../assets/LOGO.png" alt="ExploreNest Logo" class="logo">
             <nav class="navigation-menu">
                 <a href="#" class="menu-link">Mis planes</a>
                 <a href="#" class="menu-link">Hoteles</a>
