--- a/src/app/landing-page-real/landing-page-real.component.html
+++ b/src/app/landing-page-real/landing-page-real.component.html
@@ -23,11 +23,11 @@
             <button class="cta-button">¡Personaliza tu experiencia!</button>
         </div>
     </div>
-    <!--div id="floating-buttons" [class.hidden]="!showButtons">
+    <div #scrollTarget id="floating-buttons" [class.hidden]="!showButtons" [class.show]="showButtons">
         <img src="assets/mi_billetera.png" alt="Mi Billetera" />
         <img src="assets/hoteles.png" alt="Hoteles" />
         <img src="assets/planes.png" alt="Planes" />
         <img src="assets/vuelos.png" alt="Vuelos" />
         <img src="assets/autos.png" alt="Autos" />
-      </div-->
+      </div>
 </body>
