--- a/src/app/landing-page-real/landing-page-real.component.html
+++ b/src/app/landing-page-real/landing-page-real.component.html
@@ -1,7 +1,7 @@
-<body>
+<section id="first-section">
     <div class="landing-page-container">
         <div class="header">
-            <h1 class ="app-name">ExploreNest</h1>
+            <h1 class="app-name">ExploreNest</h1>
             <img src="../../assets/LOGO.png" alt="ExploreNest Logo" class="logo">
             <nav class="navigation-menu">
                 <a href="#" class="menu-link">Mis planes</a>
@@ -14,7 +14,7 @@
     <div class="search-box">
         <input type="text" class="search-input" placeholder="Buscar...">
         <span class="search-clear">&times;</span>
-    </div>   
+    </div>
     <div class="content-container">
         <div class="text-container">
             <p class="subtitle">Descubre nuevos horizontes desde la seguridad de tu nido</p>
@@ -23,11 +23,12 @@
             <button class="cta-button">¡Personaliza tu experiencia!</button>
         </div>
     </div>
-    <div #scrollTarget id="floating-buttons" [class.hidden]="!showButtons" [class.show]="showButtons">
-        <img src="assets/mi_billetera.png" alt="Mi Billetera" />
-        <img src="assets/hoteles.png" alt="Hoteles" />
-        <img src="assets/planes.png" alt="Planes" />
-        <img src="assets/vuelos.png" alt="Vuelos" />
-        <img src="assets/autos.png" alt="Autos" />
-      </div>
-</body>
+
+</section>
+<section id="second-section">
+    <img src="assets/mi_billetera.png" alt="Mi Billetera" class="imagen-boton" />
+    <img src="assets/hoteles.png" alt="Hoteles" class="imagen-boton" />
+    <img src="assets/planes.png" alt="Planes" class="imagen-boton" />
+    <img src="assets/vuelos.png" alt="Vuelos" class="imagen-boton" />
+    <img src="assets/autos.png" alt="Autos" class="imagen-boton" />
+</section>
