--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -51,4 +51,208 @@
             </div>
         </div>
     </div>
+    <div class="landing-page-container">
+        <div class="header">
+            <h1 class ="app-name">ExploreNest</h1>
+            <img src="../../assets/LOGO.png" alt="ExploreNest Logo" class="logo">
+            <nav class="navigation-menu">
+                <a href="#" class="menu-link">Mis planes</a>
+                <a href="#" class="menu-link">Hoteles</a>
+                <a href="#" class="menu-link">Vuelos</a>
+                <a href="#" class="menu-link">Actividades</a>
+            </nav>
+        </div>
+        <!--Aqui va el encabezado-->
+        
+
+    </div>
+    <div class="contenido">
+        <div class="full">
+            <div class="three-quarters">
+                <span>Mientras planeamos el viaje de tus sueños, te invitamos a registrarte</span>
+
+            </div>
+            <div class="quarter">
+                <br>
+            </div>
+        </div>
+        <br>
+        <div class="full">
+            <!--Aqui va el formulario-->
+            <div class="contenedor-formulario half">
+                <form class="formulario">
+                    <input type="text" class="input" placeholder="Nombre completo"> <br>
+                    <input type="text" class="input" placeholder="Celular"> <br>
+                    <input type="text" class="input" placeholder="Correo"> <br>
+                    <button id="boton-registrarse">¡Registrarse!</button>
+                </form>
+            </div>
+            <div class="half">
+                <br>
+            </div>
+
+        </div>
+        <br>
+        <div class="full">
+            <div class="half">
+                <p>¿Ya eres miembro? <a href="">Inicia sesión</a></p>
+            </div>
+            <div class="half">
+                <br>
+            </div>
+        </div>
+    </div>
+    <div class="landing-page-container">
+        <div class="header">
+            <h1 class ="app-name">ExploreNest</h1>
+            <img src="../../assets/LOGO.png" alt="ExploreNest Logo" class="logo">
+            <nav class="navigation-menu">
+                <a href="#" class="menu-link">Mis planes</a>
+                <a href="#" class="menu-link">Hoteles</a>
+                <a href="#" class="menu-link">Vuelos</a>
+                <a href="#" class="menu-link">Actividades</a>
+            </nav>
+        </div>
+        <!--Aqui va el encabezado-->
+        
+
+    </div>
+    <div class="contenido">
+        <div class="full">
+            <div class="three-quarters">
+                <span>Mientras planeamos el viaje de tus sueños, te invitamos a registrarte</span>
+
+            </div>
+            <div class="quarter">
+                <br>
+            </div>
+        </div>
+        <br>
+        <div class="full">
+            <!--Aqui va el formulario-->
+            <div class="contenedor-formulario half">
+                <form class="formulario">
+                    <input type="text" class="input" placeholder="Nombre completo"> <br>
+                    <input type="text" class="input" placeholder="Celular"> <br>
+                    <input type="text" class="input" placeholder="Correo"> <br>
+                    <button id="boton-registrarse">¡Registrarse!</button>
+                </form>
+            </div>
+            <div class="half">
+                <br>
+            </div>
+
+        </div>
+        <br>
+        <div class="full">
+            <div class="half">
+                <p>¿Ya eres miembro? <a href="">Inicia sesión</a></p>
+            </div>
+            <div class="half">
+                <br>
+            </div>
+        </div>
+    </div>
+    <div class="landing-page-container">
+        <div class="header">
+            <h1 class ="app-name">ExploreNest</h1>
+            <img src="../../assets/LOGO.png" alt="ExploreNest Logo" class="logo">
+            <nav class="navigation-menu">
+                <a href="#" class="menu-link">Mis planes</a>
+                <a href="#" class="menu-link">Hoteles</a>
+                <a href="#" class="menu-link">Vuelos</a>
+                <a href="#" class="menu-link">Actividades</a>
+            </nav>
+        </div>
+        <!--Aqui va el encabezado-->
+        
+
+    </div>
+    <div class="contenido">
+        <div class="full">
+            <div class="three-quarters">
+                <span>Mientras planeamos el viaje de tus sueños, te invitamos a registrarte</span>
+
+            </div>
+            <div class="quarter">
+                <br>
+            </div>
+        </div>
+        <br>
+        <div class="full">
+            <!--Aqui va el formulario-->
+            <div class="contenedor-formulario half">
+                <form class="formulario">
+                    <input type="text" class="input" placeholder="Nombre completo"> <br>
+                    <input type="text" class="input" placeholder="Celular"> <br>
+                    <input type="text" class="input" placeholder="Correo"> <br>
+                    <button id="boton-registrarse">¡Registrarse!</button>
+                </form>
+            </div>
+            <div class="half">
+                <br>
+            </div>
+
+        </div>
+        <br>
+        <div class="full">
+            <div class="half">
+                <p>¿Ya eres miembro? <a href="">Inicia sesión</a></p>
+            </div>
+            <div class="half">
+                <br>
+            </div>
+        </div>
+    </div>
+    <div class="landing-page-container">
+        <div class="header">
+            <h1 class ="app-name">ExploreNest</h1>
+            <img src="../../assets/LOGO.png" alt="ExploreNest Logo" class="logo">
+            <nav class="navigation-menu">
+                <a href="#" class="menu-link">Mis planes</a>
+                <a href="#" class="menu-link">Hoteles</a>
+                <a href="#" class="menu-link">Vuelos</a>
+                <a href="#" class="menu-link">Actividades</a>
+            </nav>
+        </div>
+        <!--Aqui va el encabezado-->
+        
+
+    </div>
+    <div class="contenido">
+        <div class="full">
+            <div class="three-quarters">
+                <span>Mientras planeamos el viaje de tus sueños, te invitamos a registrarte</span>
+
+            </div>
+            <div class="quarter">
+                <br>
+            </div>
+        </div>
+        <br>
+        <div class="full">
+            <!--Aqui va el formulario-->
+            <div class="contenedor-formulario half">
+                <form class="formulario">
+                    <input type="text" class="input" placeholder="Nombre completo"> <br>
+                    <input type="text" class="input" placeholder="Celular"> <br>
+                    <input type="text" class="input" placeholder="Correo"> <br>
+                    <button id="boton-registrarse">¡Registrarse!</button>
+                </form>
+            </div>
+            <div class="half">
+                <br>
+            </div>
+
+        </div>
+        <br>
+        <div class="full">
+            <div class="half">
+                <p>¿Ya eres miembro? <a href="">Inicia sesión</a></p>
+            </div>
+            <div class="half">
+                <br>
+            </div>
+        </div>
+    </div>
 </body>
