--- a/src/app/landing-page-real/landing-page-real.component.html
+++ b/src/app/landing-page-real/landing-page-real.component.html
@@ -26,9 +26,24 @@
 
 </section>
 <section id="second-section">
-    <img src="assets/mi_billetera.png" alt="Mi Billetera" class="imagen-boton" />
-    <img src="assets/hoteles.png" alt="Hoteles" class="imagen-boton" />
-    <img src="assets/planes.png" alt="Planes" class="imagen-boton" />
-    <img src="assets/vuelos.png" alt="Vuelos" class="imagen-boton" />
-    <img src="assets/autos.png" alt="Autos" class="imagen-boton" />
+    <a class = "boton" href="url">
+        <img src="assets/mi_billetera.png" alt="Mi Billetera" class="imagen-boton" />
+    </a>
+    <a class = "boton" href="url">
+        <img src="assets/hoteles.png" alt="Hoteles" class="imagen-boton" />
+    </a>
+    <a class = "boton" href="url">
+        <img src="assets/planes.png" alt="Planes" class="imagen-boton" />
+    </a>
+    <a class = "boton" href="url">
+        <img src="assets/vuelos.png" alt="Vuelos" class="imagen-boton" />
+    </a>
+    <a class = "boton" href="url">
+        <img src="assets/autos.png" alt="Autos" class="imagen-boton" />
+    </a>
+</section>
+<section id="third-section">
+    <h1 class="titulo">Planes Destacados</h1>
+
+
 </section>
